--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <!-- Stops the user from being able to drag cards code from https://stackoverflow.com/questions/704564/disable-drag-and-drop-on-html-elements#:~:text=You%20can%20disable%20dragging%20simply,draggable%3D%22false%22%20attribute.-->
 <body ondragstart="return false;" ondrop="return false;">
-    
     <!--Title and controls-->
     <div class="container-fluid control-container d-flex justify-content-center">
         <div class="music-icon">
@@ -23,8 +22,8 @@
             <span class="sr-only">Play/Stop Music</span>
         </div>
         <h1 class="page-title">
-        <span class="page-title-box">Snake Hunt</span>
-    </h1>
+            <span class="page-title-box">Snake Hunt</span>
+        </h1>
         <div class="restart-icon">
             <h4>Restart</h4>
             <i id="restart-button" class="fas fa-redo-alt"></i>
@@ -39,7 +38,8 @@
                     <h4 class="modal-title">Welcome to Snake Hunt</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Click on a card to reveal a snake, try to find the matching card. Find all the matches before the time runs out.<br> Good Luck!<br><br></p> 
+                    <p>Click on a card to reveal a snake, try to find the matching card. Find all the matches before the
+                        time runs out.<br> Good Luck!<br><br></p>
                     <h5>Select a difficulty level:</h5>
                 </div>
                 <div class="modal-footer">
@@ -50,7 +50,6 @@
             </div>
         </div>
     </div>
-
     <!--Difficulty overlays -->
     <div class="overlay-text" id="easy-overlay">
         <h1>Easy Mode Selected!</h1>
@@ -88,7 +87,6 @@
             <li><span id="score-five"></span></li>
         </ul>
     </div>
-
     <!--Game Area-->
     <div class="game-container">
         <div class="game-info-container">
@@ -240,12 +238,15 @@
     <br><br><br>
     <footer>
         <div class="links">
-            <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
-            <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
-            <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i><span class="sr-only">Github</span></a>
-            <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span class="sr-only">Twitter</span></a>
+            <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span
+                    class="sr-only">Instagram</span></a>
+            <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i><span
+                    class="sr-only">Facebook</span></a>
+            <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i><span
+                    class="sr-only">Github</span></a>
+            <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span
+                    class="sr-only">Twitter</span></a>
         </div>
-
     </footer>
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
@@ -258,5 +259,4 @@
     </script>
     <script src="assets/js/main.js" async></script>
 </body>
-
 </html>
